# NTPoly

./: .travis.yml  .unibeautifyrc.yml  About.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Citations.bib  Documentation.md  Downloads.md  Doxyfile.in  Feature.md  FeatureList.md  Ford.in  Gemfile  Links.md  News.md  ReadMe.md  _chebyshev_solvers_8h_source.html  _chebyshev_solvers__c_8h_source.html  _config.yml  _density_matrix_solvers_8h_source.html  _density_matrix_solvers__c_8h_source.html  _distributed_blocked_sparse_matrix_8h_source.html  _distributed_blocked_sparse_matrix__c_8h_source.html  _distributed_matrix_memory_pool_8h_source.html  _distributed_matrix_memory_pool__c_8h_source.html  _distributed_sparse_matrix_8h_source.html  _distributed_sparse_matrix__c_8h_source.html  _eigen_bounds_8h_source.html  _eigen_bounds__c_8h_source.html  _exponential_solvers_8h_source.html  _exponential_solvers__c_8h_source.html  _fixed_solvers_parameters_8h_source.html  _fixed_solvers_parameters__c_8h_source.html  _inverse_solvers_8h_source.html  _inverse_solvers__c_8h_source.html  _iterative_solvers_parameters_8h_source.html  _iterative_solvers_parameters__c_8h_source.html  _linear_solvers_8h_source.html  _linear_solvers__c_8h_source.html  (+386 more)
Documentation/: CMakeLists.txt  Doxyfile.in  Ford.in  doc.css
Documentation/source/: basic.rst  conf.py  electronic_solvers.rst  other.rst
Driver/: CMakeLists.txt  InverseDriver.f90
Examples/CMakeLinkage/: CMakeLists.txt  ReadMe.md
Source/C/: Analysis_c.h  CMakeLists.txt  ChebyshevSolvers_c.h  DensityMatrixSolvers_c.h  DistributedBlockedSparseMatrix_c.h  DistributedMatrixMemoryPool_c.h  DistributedSparseMatrix_c.h  EigenBounds_c.h  EigenSolvers_c.h  ExponentialSolvers_c.h  FermiOperatorExpansion_c.h  FermiOperator_c.h  FixedSolversParameters_c.h  GeometryOptimization_c.h  HermiteSolvers_c.h  InverseSolvers_c.h  IterativeSolversParameters_c.h  LinearSolvers_c.h  LoadBalancer_c.h  Logging_c.h  MatrixConversion_c.h  MatrixMemoryPool_c.h  MinimizerSolvers_c.h  PMatrixMemoryPool_c.h  PSMatrix_c.h  Permutation_c.h  Polynomial_c.h  ProcessGrid_c.h  RootSolvers_c.h  SMatrix_c.h  SignSolvers_c.h  SolverParameters_c.h  SparseMatrix_c.h  SquareRootSolvers_c.h  TrigonometrySolvers_c.h  TripletList_c.h  Wrapper.h
Source/CPlusPlus/: Analysis.cc  Analysis.h  CMakeLists.txt  ChebyshevSolvers.cc  ChebyshevSolvers.h  DensityMatrixSolvers.cc  DensityMatrixSolvers.h  DistributedBlockedSparseMatrix.cc  DistributedBlockedSparseMatrix.h  DistributedMatrixMemoryPool.cc  DistributedMatrixMemoryPool.h  DistributedSparseMatrix.cc  DistributedSparseMatrix.h  EigenBounds.cc  EigenBounds.h  EigenSolvers.cc  EigenSolvers.h  ExponentialSolvers.cc  ExponentialSolvers.h  FermiOperator.cc  FermiOperator.h  FermiOperatorExpansion.cc  FermiOperatorExpansion.h  FixedSolversParameters.cc  FixedSolversParameters.h  GeometryOptimization.cc  GeometryOptimization.h  HermiteSolvers.cc  HermiteSolvers.h  InverseSolvers.cc  InverseSolvers.h  IterativeSolversParameters.cc  IterativeSolversParameters.h  LinearSolvers.cc  LinearSolvers.h  LoadBalancer.cc  LoadBalancer.h  Logging.cc  Logging.h  MatrixConversion.cc  (+38 more)
Source/Fortran/: AnalysisModule.F90  CMakeLists.txt  ChebyshevSolversModule.F90  ChebyshevSolversModule.f90  CholeskyModule.F90  CholeskySolversModule.F90  ConvergenceMonitorModule.F90  DMatrixModule.F90  DataTypesModule.F90  DataTypesModule.f90  DenseMatrixModule.f90  DensityMatrixSolversModule.F90  DensityMatrixSolversModule.f90  DistributedBlockedSparseMatrixModule.f90  DistributedMatrixMemoryPoolModule.f90  DistributedSparseMatrixAlgebraModule.f90  DistributedSparseMatrixModule.f90  EigenBoundsModule.F90  EigenBoundsModule.f90  EigenExaModule.F90  EigenExaModule.f90  EigenSolversModule.F90  EigenSolversModule.f90  ErrorModule.F90  ErrorModule.f90  ExponentialSolversModule.F90  ExponentialSolversModule.f90  FermiOperatorExpansionModule.F90  FermiOperatorModule.F90  FixedSolversModule.F90  FixedSolversModule.f90  GemmTasksModule.F90  GemmTasksModule.f90  GeometryOptimizationModule.F90  GeometryOptimizationModule.f90  HMatrixAlgebraModule.F90  HermiteSolversModule.F90  HermiteSolversModule.f90  InverseSolversModule.F90  InverseSolversModule.f90  (+61 more)
Source/Swig/: CMakeLists.txt  ConfigPython.cmake  NTPolySwig.i
Source/Wrapper/: AnalysisModule_wrp.F90  CMakeLists.txt  ChebyshevSolversModule_wrp.F90  ChebyshevSolversModule_wrp.f90  DensityMatrixSolversModule_wrp.F90  DensityMatrixSolversModule_wrp.f90  DistributedBlockedSparseMatrixModule_wrp.f90  DistributedMatrixMemoryPoolModule_wrp.f90  DistributedSparseMatrixAlgebraModule_wrp.f90  DistributedSparseMatrixModule_wrp.f90  EigenBoundsModule_wrp.F90  EigenBoundsModule_wrp.f90  EigenSolversModule_wrp.F90  EigenSolversModule_wrp.f90  ExponentialSolversModule_wrp.F90  ExponentialSolversModule_wrp.f90  FermiOperatorExpansionModule_wrp.F90  FermiOperatorModule_wrp.F90  FixedSolversModule_wrp.f90  GeometryOptimizationModule_wrp.F90  GeometryOptimizationModule_wrp.f90  HermiteSolversModule_wrp.F90  HermiteSolversModule_wrp.f90  InverseSolversModule_wrp.F90  InverseSolversModule_wrp.f90  IterativeSolversModule_wrp.F90  IterativeSolversModule_wrp.f90  LinearSolversModule_wrp.F90  LinearSolversModule_wrp.f90  LoadBalancerModule_wrp.F90  LoadBalancerModule_wrp.f90  LoggingModule_wrp.F90  MatrixConversionModule_wrp.F90  MatrixMemoryPoolModule_wrp.F90  MatrixMemoryPoolModule_wrp.f90  MinimizerSolversModule_wrp.F90  MinimizerSolversModule_wrp.f90  (+28 more)
UnitTests/: CMakeLists.txt  CurrentTest.sh  ExampleBranchTest.sh  Helpers.py  RunTest.sh  TypeCleanup.sh  before_install.sh  bench.f90  build_mpi.sh  check_examples.sh  generate_elsi.py  getpypath.py  helpers.py  lint.sh  run_ci_test.sh  run_cmake.sh  testBuildInstructions.py  testChemistry.py  testDistributedSparseMatrix.py  testDistributedSparseMatrixAlgebra.py  testSolvers.py  testSparseMatrix.py  test_build.py  test_chemistry.py  test_matrix.py  test_psmatrix.py  test_psmatrixalgebra.py  test_solvers.py  travis_before_install.sh  travis_build_mpi.sh  travis_check_examples.sh  travis_run_cmake.sh
(+5556 files in other folders)
