set(Csrc
    ChebyshevSolvers_c.h
    DensityMatrixSolvers_c.h
    EigenBounds_c.h
    ExponentialSolvers_c.h
    GeometryOptimization_c.h
    HermiteSolvers_c.h
    InverseSolvers_c.h
    LinearSolvers_c.h
    LoadBalancer_c.h
    MatrixMemoryPool_c.h
    MinimizerSolvers_c.h
    PMatrixMemoryPool_c.h
    PSMatrix_c.h
    Permutation_c.h
    Polynomial_c.h
    ProcessGrid_c.h
    RootSolvers_c.h
    SignSolvers_c.h
    SolverBase_c.h
    SolverParameters_c.h
    SMatrix_c.h
    SquareRootSolvers_c.h
    TrigonometrySolvers_c.h
    TripletList_c.h
    Triplet_c.h
    Wrapper.h
)

install(DIRECTORY . DESTINATION include)
